new correction added

--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
                 </div>
               </div>
         </nav>
+        <div>
+            <h1 class="text-center text-red-800 mt-8 ">Have a Beautiful life</h1>
+        </div>
+        <div class="mt-8">
+            <img class="h-[700px] w-[1100px]  ml-16 " src="images/perfect bd.jpg" alt="" style="width: 90%; height:auto;">
+        </div>
     </header>
     <main>
-        <div class="flex justify-around">
+        <div class="flex justify-around mt-8">
             <div class="grid grid-cols-1 lg:grid-cols-3">
                 <div class="card w-96 bg-base-100 shadow-xl mt-8 ml-14">
                     <figure class="px-10 pt-10">
-                      <img src="images/5047880.jpeg" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/5047880.jpeg" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Maisha!</h2>
@@ -45,7 +51,7 @@
                   </div>
                   <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                      <img src="images/96549953.jpg" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/96549953.jpg" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Farzana!</h2>
@@ -57,7 +63,7 @@
                   </div>
                   <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                      <img src="images/Beautiful-Birthday-Cards-Wishes.png" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/Beautiful-Birthday-Cards-Wishes.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Antora!</h2>
@@ -73,7 +79,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-3">
                 <div class="card w-96 bg-base-100 shadow-xl ml-14">
                     <figure class="px-10 pt-10">
-                      <img src="images/download.jfif" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/download.jfif" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Great Day</h2>
@@ -85,7 +91,7 @@
                   </div>
                   <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                      <img src="images/happy-birthday-greeting-card-for-lover-min_bed3cb409.jpg" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/happy-birthday-greeting-card-for-lover-min_bed3cb409.jpg" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Special Day</h2>
@@ -97,7 +103,7 @@
                   </div>
                   <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                      <img src="images/istockphoto-1136810581-170667a.jpg" alt="Shoes" class="rounded-xl" />
+                      <img class="h-52" src="images/istockphoto-1136810581-170667a.jpg" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title">Cake</h2>
